// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LandingPageComponent should not render <app-partner-logo> when 0 is provided 1`] = `
<div
  id="root12"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render <app-product-item> when 0 is provided 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="products"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame1tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render <app-testimonial-item> when 0 is provided 1`] = `
<div
  id="root16"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render anything if the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render frames when 0 frame is provided 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render the hero section when the heroXVM is not provided 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should not render the texts of the buttons inside the hero if provided 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-hero>
        <section
          class="h-[75vh] flex flex-col justify-center bg-no-repeat bg-right-top bg-cover sm:space-y-10 md:ml-60 transition-all"
          style="background-image: url("assets/unknown.jpg");"
        >
          <div
            class="flex flex-col mx-10 space-y-5"
          >
            <h1>
              tit
            </h1>
            <p>
              tit
            </p>
            <div
              class="join"
            >
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                    <!--container-->
                  </button>
                </app-button>
              </a>
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                    <!--container-->
                  </button>
                </app-button>
              </a>
            </div>
          </div>
        </section>
        <!--container-->
      </app-hero>
      <!--container-->
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 1 <app-partner-logo> when 1 is provided 1`] = `
<div
  id="root13"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame1partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 1 <app-product-item> when 1 is provided 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="products"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame1tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt1"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit1
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc1
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 1 <app-testimonial-item> when 1 is provided 1`] = `
<div
  id="root17"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame1testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    John
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame1role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 1 frame when 1 frame is provided 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="products"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame1tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 5 <app-partner-logo> in order when 5 app-partner-logo are provided 1`] = `
<div
  id="root14"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="1"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame1partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame2partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame3partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame4partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame5partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 5 <app-product-item> in order when 5 <app-product-item>  are provided 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="products"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame1tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt1"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit1
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc1
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt2"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit2
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc2
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt3"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit3
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc3
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt4"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit4
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc4
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <app-product-item
                class="h-full"
                tabindex="0"
              >
                <a
                  class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                >
                  <img
                    alt="1alt5"
                    class="w-auto h-auto object-cover rounded-md"
                    src="assets/lepke.jpg"
                  />
                  <h3
                    class="font-bold text-xl sm:text-2xl mt-4"
                  >
                    1tit5
                  </h3>
                  <p
                    class="mt-4"
                  >
                    1desc5
                  </p>
                </a>
                <!--container-->
              </app-product-item>
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 5 <app-testimonial-item> in order when 5 app-testimonial-item are provided 1`] = `
<div
  id="root18"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame1testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    John
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame1role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame2testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    Doe
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame2role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame3testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    Elizabeth
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame3role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame4testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    Swan
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame4role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <swiper-slide
              class="pb-10"
            >
              <app-testimonial-item>
                <div
                  class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                >
                  <p
                    class="text-lg italic text-gray-700"
                  >
                    "2frame5testimonial"
                  </p>
                  <p
                    class="font-semibold text-gray-900 mt-4"
                  >
                    Depp
                  </p>
                  <p
                    class="text-gray-500"
                  >
                    2frame5role
                  </p>
                </div>
                <!--container-->
              </app-testimonial-item>
            </swiper-slide>
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 5 frames in order when 5 frames are provided 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="1"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame1tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <app-frame
        id="3"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame3tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <app-frame
        id="4"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame4tit
          </h2>
          <!--container-->
          <app-product-list>
            <div
              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
            >
              <!--container-->
            </div>
          </app-product-list>
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <app-frame
        id="4"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame5tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render 5 mixed <app-partner-logo> in order when 5 app-partner-logo are provided 1`] = `
<div
  id="root15"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <app-frame
        id="2"
      >
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <h2>
            frame2tit
          </h2>
          <!--container-->
          <app-partner-list>
            <div
              class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
            >
              <a
                href=""
                rel="noopener noreferrer"
                target="_self"
              >
                <app-partner-logo>
                  <img
                    alt="2frame1partner"
                    class="w-52 h-52"
                    src="assets/lepke.jpg"
                  />
                </app-partner-logo>
              </a>
              <!--container-->
              <!--container-->
              <a
                href=""
                rel="noopener noreferrer"
                target="_self"
              >
                <app-partner-logo>
                  <img
                    alt="2frame2partner"
                    class="w-52 h-52"
                    src="assets/lepke.jpg"
                  />
                </app-partner-logo>
              </a>
              <!--container-->
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame3partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <!--container-->
              <app-partner-logo>
                <img
                  alt="2frame4partner"
                  class="w-52 h-52"
                  src="assets/lepke.jpg"
                />
              </app-partner-logo>
              <!--container-->
              <a
                href=""
                rel="noopener noreferrer"
                target="_self"
              >
                <app-partner-logo>
                  <img
                    alt="2frame5partner"
                    class="w-52 h-52"
                    src="assets/lepke.jpg"
                  />
                </app-partner-logo>
              </a>
              <!--container-->
              <!--container-->
              <!--container-->
            </div>
          </app-partner-list>
          <!--container-->
          <swiper-container
            autoplay-delay="2500"
            autoplay-disable-on-interaction="false"
            class="w-full sm:w-2/3 md:w-1/2"
            keyboard="true"
            pagination="true"
            pagination-clickable="true"
            pagination-dynamic-bullets="true"
            space-between="30"
          >
            <!--container-->
          </swiper-container>
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
      <!--ng-container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render the hero section when the heroXVM is provided 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-hero>
        <section
          class="h-[75vh] flex flex-col justify-center bg-no-repeat bg-right-top bg-cover sm:space-y-10 md:ml-60 transition-all"
          style="background-image: url("assets/unknown.jpg");"
        >
          <div
            class="flex flex-col mx-10 space-y-5"
          >
            <h1>
              tit
            </h1>
            <p>
              tit
            </p>
            <div
              class="join"
            >
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                    <!--container-->
                  </button>
                </app-button>
              </a>
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                    <!--container-->
                  </button>
                </app-button>
              </a>
            </div>
          </div>
        </section>
        <!--container-->
      </app-hero>
      <!--container-->
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render the template when there is a VM provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`LandingPageComponent should render the texts of the buttons inside the hero if provided 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-hero>
        <section
          class="h-[75vh] flex flex-col justify-center bg-no-repeat bg-right-top bg-cover sm:space-y-10 md:ml-60 transition-all"
          style="background-image: url("assets/unknown.jpg");"
        >
          <div
            class="flex flex-col mx-10 space-y-5"
          >
            <h1>
              tit
            </h1>
            <p>
              tit
            </p>
            <div
              class="join"
            >
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                     primary 
                    <!--container-->
                  </button>
                </app-button>
              </a>
              <a
                href=""
              >
                <app-button>
                  <button
                    class="btn flex flex-row justify-center btn-primary"
                  >
                     secondary 
                    <!--container-->
                  </button>
                </app-button>
              </a>
            </div>
          </div>
        </section>
        <!--container-->
      </app-hero>
      <!--container-->
      <!--container-->
      <!--container-->
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;
